Bug 128437 - FILEOPEN: Cell in table is displayed on next page
Summary: FILEOPEN: Cell in table is displayed on next page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
: 131934 132644 (view as bug list)
Depends on:
Blocks: Writer-Table-Layouting
  Show dependency treegraph
 
Reported: 2019-10-28 17:35 UTC by Xisco Faulí
Modified: 2023-09-26 11:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.4 Master (4.55 MB, application/pdf)
2019-10-28 17:35 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-10-28 17:35:52 UTC
Created attachment 155374 [details]
comparison MSO 2010 and LibreOffice 6.4 Master

Steps to reproduce:
1. Open attachment 72626 [details] from bug 59106
2. Go to page 2 and 3
3. Check the 'Definição:' cell

-> it's displayed on the third page. clicking on it moves it to page 2

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: c4d760b9edf0399955d30a0dfbe5f7b1b1ed37cb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-10-28 17:37:52 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=cc5916cd314a27b0cc99560ab887480026630a95

author	Michael Stahl <Michael.Stahl@cib.de>	2019-05-08 16:23:25 +0200
committer	Michael Stahl <Michael.Stahl@cib.de>	2019-05-09 10:53:11 +0200
commit cc5916cd314a27b0cc99560ab887480026630a95 (patch)
tree 924f56d1eb105c9e6d71c90cf6291fec6e3f7f60
parent f8b4d371eddd27594d549fb00294c01229a9bd24 (diff)
tdf#124675 sw: fix crash when moving SwTextFrame in table to prev page

Bisected with: bibisect-linux64-6.3

Adding Cc: to Michael Stahl
Comment 2 Telesto 2020-05-03 15:20:15 UTC
*** Bug 132644 has been marked as a duplicate of this bug. ***
Comment 3 Telesto 2020-05-03 15:25:42 UTC
Adding bug 132642 as see also. Unrelated to this bug, but also about table splitting going wrong
Comment 4 Telesto 2020-05-03 15:30:17 UTC
*** Bug 131934 has been marked as a duplicate of this bug. ***
Comment 5 Telesto 2020-05-06 07:52:22 UTC
The whole problem must have a greater range. Based on my simple test document bug 132644. It changes the page layout between editing and saving & reloading

Increasing priority.
Comment 6 Telesto 2020-05-09 15:28:53 UTC
I'm adding bug 132872 to see also. In some sense related, I think; except being inherent-ed and caused by footnotes (and embedded tables). Does the opposite, clicking causes splitting the table at a different point.
Comment 7 Justin L 2021-01-15 11:51:37 UTC
No work done in the past year, so removing the assignment.
Comment 8 Telesto 2021-06-29 18:52:06 UTC
Repro
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c38d0d501f5eca648bdf0fd2914b57e06f505f7e
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 9 Gabor Kelemen (Collabora) 2022-11-14 11:28:21 UTC
This has changed somewhat in 7.4 with:

https://git.libreoffice.org/core/+/cc7de9022b83c4103f1dc9ba6a8c1a8a98a21324

author	Michael Stahl <michael.stahl@allotropia.de>	Mon Jul 11 19:20:33 2022 +0200
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Thu Jul 14 23:03:06 2022 +0200

sw: fix spurious layout invalidation from ~SwCallLink()

Now the document opens as 6 pages instead of the expected 5, but clicking in the 3rd page does not change the layout back to 5 pages, keeps it at the incorrect 6.
Comment 10 SusanneMohn 2022-12-05 12:52:41 UTC
I chanhed the Document to docx (Word 2019), opened it in LO 7.4.3.2: The Layout is correct.
Comment 11 Xisco Faulí 2023-06-02 10:08:17 UTC
Still reproducible in

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 845054aa25b7cba1daa1ff30b142d549027299bd
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 12 Commit Notification 2023-08-24 10:44:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bfa81a200ab59971b69823f9a29d8ce222d655e6

tdf#128437 tdf#128966 sw: layout: partially revert fix of tdf#124675

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Michael Stahl 2023-08-24 11:12:59 UTC
fixed on master
Comment 14 Commit Notification 2023-09-26 11:39:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7272d2c152424255437f8fbda5ed31737404d52c

tdf#128437 tdf#128966 sw: layout: partially revert fix of tdf#124675

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.